fix: wrap sandbox preview

--- a/src/containers/MintGenerative/Step1/styles.module.scss
+++ b/src/containers/MintGenerative/Step1/styles.module.scss
@@ -24,12 +24,6 @@
   cursor: pointer;
 }
 
-.wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 80px;
-}
-
 .uploadStatus {
   padding: 16px;
   display: flex;
