--- a/src/containers/MintGenerative/Step2/styles.module.scss
+++ b/src/containers/MintGenerative/Step2/styles.module.scss
@@ -1,8 +1,4 @@
 .wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 80px;
-
   label {
     font-weight: 700;
   }
